Support release and preview options
Closes #115